Kolya, lovi